@@ -16,6 +16,7 @@
     ADDED: import/export of keyboard shortcuts
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
 
+    FIXED: krusader's detection of old or incompatible versions
     FIXED: dirk's patch for better looking icons
     FIXED: cannot open FTP proxy bookmarks
     FIXED: [ 1101237 ] the reload shortcut is always set to Ctrl+R at startup
